# platform-backend

./: Dockerfile  README.md  alembic.ini  pyproject.toml
app/: config.py  database.py  logging_config.py  main.py  middleware.py
app/dependencies/: auth.py
app/models/: __init__.py  base.py  product.py  subscription.py  user.py
app/routes/: __init__.py  auth.py  dashboard.py  products.py  subscriptions.py
app/schemas/: auth.py  dashboard.py  product.py  subscription.py
app/services/: product_feature_service.py  product_service.py  subscription_service.py  supabase_service.py
migrations/: env.py
migrations/versions/: 20250406_1701_b5d5cf0d4579_added_user_table_and_product_tables.py
tests/: conftest.py  test_dashboard.py
